--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ header {
 
 header h2 {
   margin: 0 0 0.5rem 0;
+  color: #fff;
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 0.5px;
